# path-tracing

./: .gitignore  CMakeLists.txt  ConsoleApplication1.sln  ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters  README.md  Sphere.h  Vec3.h  __bmp_reader.cpp  camera.cpp  camera.h  compute_shader.cpp  defines.h  entity.cpp  entity.h  light_test.c  main.cpp  makefile  mesh.cpp  mesh.h  model.cpp  model.h  packages.config  pathtracer  player.cpp  player.h  texture.cpp  texture.h  tgareader.cpp  tgareader.h
.PVS-Studio/: depend_info.json
fmath/: fmath.cpp  fmath.h
include/: aabb.h  bvh.h  scene.h  shader.h  triangle.h  vector3.h
models/: floor.mtl
path-tracing/: CMakeLists.txt
path-tracing/include/: compute_shader.h
path-tracing/shaders/: path_tracer.cs
shaders/: path_tracer.cs  screen_quad.fs
src/: main.cpp  shader.cpp
untitled/: main.cpp
vec/: vec.cpp  vec.h
x64/Debug/: vc142.idb
x64/Debug/ConsoleA.DE07A7BD.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ConsoleApplication1.lastbuildstate
